# meta-env

./: .gitignore  Dockerfile  LICENSE  README.md  USAGE.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  ui
Problem-Statement/: Problem.md
api/: routes.py
curriculum/: adaptive_sampler.py
data/: __init__.py  adapters.py  code_scenarios.py  fixtures.py  generator.py  osv_cache.json  osv_cache.py  osv_client.py
data/cve_cache/: Go__github.com_dgrijalva_jwt-go.json  Go__github.com_gin-gonic_gin.json  Go__github.com_tidwall_gjson.json  Go__golang.org_x_crypto.json  Go__golang.org_x_text.json  PyPI__certifi.json  PyPI__cryptography.json  PyPI__django.json  PyPI__flask.json  PyPI__gradio.json  PyPI__idna.json  PyPI__pillow.json  PyPI__pyyaml.json  PyPI__setuptools.json  PyPI__sqlalchemy.json  PyPI__tornado.json  PyPI__transformers.json  npm__axios.json  npm__esbuild.json  npm__ip.json  npm__json5.json  npm__lodash.json  npm__postcss.json  npm__undici.json  npm__ws.json
data/seeds/: go_seed.sum  npm_seed.json  pypi_seed.txt
env/: environment.py  models.py  reward.py  verification.py
examples/: __init__.py  catalog.py
graders/: __init__.py  core.py  task_1.py  task_2.py  task_3.py
server/: app.py  ui.py
tasks/: base.py  task_1.py  task_2.py  task_3.py
tests/: test_substrate.py  test_vuln_fixtures.py
